--- a/Day02/selector.html
+++ b/Day02/selector.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Hanfan Wang
  * @Date: 2020-07-14 15:19:41
- * @LastEditTime: 2020-07-14 15:23:33
+ * @LastEditTime: 2020-07-14 15:34:36
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -30,9 +30,17 @@
 </head>
 
 <body>
-    <label for="">Choose your preferred visit time (required, Feb 12 to 20): </label>
+    <!-- <label for="">Choose your preferred visit time (required, Feb 12 to 20): </label>
     <input type="date" min="2020-02-12" max="2020-02-20" required>
-    <span></span>
+    <span></span> -->
+
+    <form action="">
+        <input type="email" required size="30" pattern="\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}\b">
+        <p>
+            <input type="submit" value="CLICK">
+        </p>
+    </form>
+
 </body>
 
 </html>
