--- a/Week04/GulpDemo/index.html
+++ b/Week04/GulpDemo/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Hanfan Wang
  * @Date: 2020-08-05 09:48:53
- * @LastEditTime: 2020-08-05 10:13:57
+ * @LastEditTime: 2020-08-05 11:01:16
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -15,6 +15,7 @@
 
 <body>
     <h1>Gulp Training</h1>
+    <script type="module" src="./dist/js/script.js"></script>
 </body>
 
 </html>
