--- a/Week08/SassDemo/index.html
+++ b/Week08/SassDemo/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SASS</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+    <header>Hi, I am John</header>
+    <article>
+        <h2>About Me</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis adipisci distinctio velit, harum quae vel
+            error deleniti possimus reiciendis optio enim libero aliquid aspernatur esse ab similique ipsa mollitia
+            consequatur!
+        </p>
+    </article>
+    <footer>
+        <p>copyright 2020 John</p>
+    </footer>
 </body>
 
 </html>
