--- a/Week09/question.html
+++ b/Week09/question.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <input id="input" type="text">
+    <input id="input" type="text" />
     <button onclick="clear()">clear</button>
     <script>
         function clear() {
