--- a/Week09/index.html
+++ b/Week09/index.html
@@ -10,7 +10,7 @@
 <body>
     <input id="input1" type="text">
     <input id="input2" type="text">
-    <button onClick="copy()">click</button>
+    <button onclick="copy()">click</button>
     <script>
         function copy() {
             let text = document.getElementById("input1").value;
